--- a/src/home/home.css
+++ b/src/home/home.css
@@ -16,12 +16,11 @@ body {
 }
 
 header {
-    background-color: rgb(219, 219, 124);
+    background-color: #E2C589;
 }
 
 .logo {
     text-align: center;
-    padding: 1rem;
     font-size: clamp(1.4rem, 3vw, 3rem);
 }
 
@@ -35,7 +34,7 @@ button {
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
     padding: 1vw 2vw;
-    font-size: clamp(1rem, 1.6vw, 1.8rem);
+    font-size: clamp(1.1rem, 2.5vw, 1.8rem);
     background-color: transparent;
     border: none; 
 }
